bug on IE

--- a/app/assets/stylesheets/new_structure/common/_black_friday.css.scss
+++ b/app/assets/stylesheets/new_structure/common/_black_friday.css.scss
@@ -1,19 +1,33 @@
 body {
-	div#content,
 	div.full_container {top:20px !important;}
+	div#content {margin-top:0px !important;}
+
 	#new_header {
 		padding-bottom:0px;
-		min-height:99px;
+		height:120px;
+	
+
 		div.new_content {
 			background: #000;
-			height:105px;
+			height:120px;
 			.olook_logo {
+				width:196px;
+				padding-top:0px;
+				height:85px !important;
 				h1 {
+					height: 100% !important;
+					width:100% !important;
+					display: block;
+					position: relative;
+					top:8px;
 					a {
 						background: image-url('common/nav/sprite_header_bf.png') no-repeat -7px -72px;
 						height:77px;
-						margin-top:4px;
+						margin-top:0px;
 						width:192px;
+						position: absolute;
+						top:0px;
+						left:0px;
 					}
 				}
 
@@ -57,10 +71,21 @@ body {
 
 	}
 	div#wrapper_new_menu {
-		height:40px;
+		height:41px;
+	
 		.menu_new {
 			background: #000;
+			padding-top:0px !important;
+			height:52px;
+			display: block;
+			position: relative;
+			.content_new {background: pink;padding-top:0px !important;}
 			.default_new {
+				padding-top:0px !important;
+				margin-top:0px !important;
+				top:0px !important;
+				left:0px;
+				position: absolute;
 				li {
 					a {
 						color:#FFF;
@@ -69,7 +94,10 @@ body {
 					a.selecionado {background: #FFF;}
 				}
 			}
-			.new_sacola a {background-image: image-url('common/nav/sprite_header_bf.png');}
+			.new_sacola {
+				a {background-image: image-url('common/nav/sprite_header_bf.png');top:0px !important;}
+				#cart_summary {top:29px !important;}
+			}
 			.cart{
 				border-top:1px solid #000;
 				border-right:1px solid #000;
@@ -84,27 +112,26 @@ body {
 		}
 		&.fixed {
 			padding-top:0px;	
-			.menu_new {padding-top:10px;}
+			.menu_new {padding-top:10px;height:31px;}
 		}
 	}
 
 	div#content {
-		top: 0px;
+		top: 0px !important;
+		ul.breadcrumb {padding-top:30px;}
 		ul.warnings {
 			background:#000;
-			margin-top:0px;
-			position: relative;
-			top:-19px;
+
 			height:63px;
-			margin-bottom:0px;
+			display: block;
 			li img {display: none;}
 			li {
 				width:100%;
-				height:53px;
+				height:63px;
 				display: block;
-				background: image-url('common/nav/sprite_header_bf.png') no-repeat 9px -260px;
+				background: image-url('common/nav/sprite_header_bf.png') #000 no-repeat 9px -260px;
 			}
 		}
-		#carousel {top:-10px;}
+		#carousel {top:10px;}
 	}
 }
